# flake8-no-fstring

./: .travis.yml  HISTORY.rst  LICENSE  README.rst  setup.cfg  tox.ini
requirements/: py36.txt  py38.txt  py39.txt
src/: flake8_no_fstring.py
tests/: test_flake8_no_fstring.py
